# Fursona-Detector

./: .gitignore  README.md  dockerfile  pyproject.toml  random_model.py  test_model.py  train_model.py
webscraper/: consts.py  model_beautfiyer.py  result.html  webscraper.py
