[tool.poetry]
name = "furryclassart"
version = "0.1.0"
description = "A fursona recon dnn model"
authors = ["NickyBlackburn <nickblackburn02@gmail.com>"]

[tool.poetry.dependencies]
python = 3.7"
tensorflow = "^2.13.0"

requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
