[tool.poetry]
name = "furryclassart"
version = "0.1.0"
description = "A fursona recon dnn model"
authors = ["NickyBlackburn <nickblackburn02@gmail.com>"]

[tool.poetry.dependencies]
python = "3.11.*"

requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
selenium = "^4.16.0"
colorama = "^0.4.6"
wget = "^3.2"
pillow = "^10.2.0"
scipy = "^1.11.4"
tensorflow = "2.14.0"
opencv-python = "^4.9.0.80"
matplotlib = "^3.8.2"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
